candidate id changed and blob container code inserted

--- a/exam_app/templates/exam_portal/exam_portal_1.html
+++ b/exam_app/templates/exam_portal/exam_portal_1.html
@@ -388,6 +388,7 @@ $.ajax({
 url: '{% url "detect_face" %}',
 type: 'POST',
 data: {
+    user:"{{user_id}}",
     image: dataURL,
     csrfmiddlewaretoken: getCookie('csrftoken')
 },
