--- a/exam_app/templates/exam_portal/camera_part_2.html
+++ b/exam_app/templates/exam_portal/camera_part_2.html
@@ -9,10 +9,8 @@
     <video id="video" autoplay></video>
     <canvas id="canvas"></canvas>
 
-
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
-    {% comment %} <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script> {% endcomment %}
     <script>
       // Get the CSRF token from the cookie
 function getCookie(name) {
@@ -40,17 +38,19 @@ const context = canvas.getContext('2d');
 navigator.mediaDevices.getUserMedia({ video: true })
   .then((stream) => {
     video.srcObject = stream;
+    captureFrame();
   })
   .catch((error) => {
     console.error('Error accessing camera:', error);
   });
 
-// Continuously capture frames and send them to the server
-setInterval(() => {
+// Capture frame and send it to the server
+function captureFrame() {
   context.drawImage(video, 0, 0, canvas.width, canvas.height);
   const imageData = canvas.toDataURL('image/png');
   sendData(imageData);
-}, 1000);  // Adjust the interval as per your requirements
+  requestAnimationFrame(captureFrame);
+}
 
 // Send image data to the server
 function sendData(imageData) {
@@ -59,6 +59,7 @@ function sendData(imageData) {
     url: '{% url "detect_face" %}',
     type: 'POST',
     data: {
+        user:"{{user_id}}",
         image: dataURL,
         csrfmiddlewaretoken: getCookie('csrftoken')
     },
@@ -76,5 +77,3 @@ function sendData(imageData) {
     
 </body>
 </html>
-
-
