--- a/exam_app/templates/dashboard/new_subject_config.html
+++ b/exam_app/templates/dashboard/new_subject_config.html
@@ -211,7 +211,8 @@ h2 {
                 <option selected disabled>Select a level</option>
                 <option>1</option>
                 <option>2</option>
-                
+                <option>3</option>
+                <option>4</option>
               </select>
             </div>
             <div class="mb-3">
