--- a/exam_app/templates/dashboard/candidate_dashboard.html
+++ b/exam_app/templates/dashboard/candidate_dashboard.html
@@ -399,21 +399,20 @@ input[type="date"]:focus {
 }
 
 
-.dashboard-header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  margin-top: 2rem;
-}
-
-.dashboard-title {
-  font-size: 24px;
-  font-weight: 500
-  color: #000000;
-  text-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25);
-  margin-bottom: 30px;
-}
-
+  .dashboard-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 2rem;
+  }
+  
+  .dashboard-title {
+    font-size: 2.5rem;
+    font-weight: bold;
+    color: #000000;
+    text-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25);
+    margin-bottom: 30px;
+  }
   ::-webkit-scrollbar {
     width: 6px;
   }
@@ -438,8 +437,8 @@ input[type="date"]:focus {
 <div class="container">
     <div class="row">
 
-      <div class="col-12 dashboard-header">
-        <h5 class="dashboard-title">Registered Candidates</h5>
+      <div class="col-12 today-attendees">
+        <h5 class="headingtoday">Registered Candidates</h5>
       </div>
       <form method="GET" class="form-inline">
         
