--- a/exam_app/templates/dashboard/resultsdetail.html
+++ b/exam_app/templates/dashboard/resultsdetail.html
@@ -97,7 +97,7 @@
         </table>
     </div>
     <div>
-        <h1>Blob Images</h1>
+        <h1>Captured Images</h1>
     {% for blob_url in blob_urls %}
         <img src="{{ blob_url }}" alt="Blob Image">
     {% endfor %}
