--- a/exam_app/templates/dashboard/dashboard.html
+++ b/exam_app/templates/dashboard/dashboard.html
@@ -460,7 +460,7 @@ input[type="date"]:focus {
     </a>
     </div>
     <div class="col-md-3 col-xl-3">
-      <a href="{% url 'registercandidate' %}">
+      <a href="{% url 'candidate_dashboard' %}">
       <div class="card bg-c-blue order-card d-flex flex-row justify-content-end">
         <div class="card-block col-md-7 col-sm-6">
           <h6 class="m-b-20">Registrations</h6>
