Update Subject.html (activateSubject))

--- a/exam_app/templates/dashboard/subject.html
+++ b/exam_app/templates/dashboard/subject.html
@@ -284,7 +284,7 @@
           </td>
         </tr>
         {% else %}
-          <td><a href="{% url 'activatePosition' id=subject.0 %}" class="btn btn-success">Activate</a>
+          <td><a href="{% url 'activateSubject' id=subject.0 %}" class="btn btn-success">Activate</a>
           </td>
           {% endif %}
         {% endfor %}
