--- a/exam_app/templates/dashboard/resultsdetail.html
+++ b/exam_app/templates/dashboard/resultsdetail.html
@@ -102,5 +102,6 @@
         <img src="{{ blob_url }}" alt="Blob Image">
     {% endfor %}
     </div>
+    <a href="{% url 'result' %}" class="btn btn-secondary" style="margin-left:50%; margin-top:10px;">Back</a>
 </body>
 </html>
