--- a/exam_app/templates/registration/login.html
+++ b/exam_app/templates/registration/login.html
@@ -158,9 +158,9 @@
                             <input type="checkbox" class="form-check-input" id="remember-me">
                             <label class="form-check-label" for="remember-me">Remember me</label>
                         </div>
-                        <div>
+                        {% comment %} <div>
                             <a href="#" class="ml-auto mt-3 text-sm">Forgot Password?</a>
-                        </div>
+                        </div> {% endcomment %}
                     </div>
                     <div class="row justify-content-center">
                         <button type="submit" class="btn btn-primary">Submit</button>
