--- a/exam_app/templates/registration/login.html
+++ b/exam_app/templates/registration/login.html
@@ -154,13 +154,14 @@
                     </div>
                     
                     <div class="form-group form-check d-flex flex-row justify-content-between">
-                        <div class="">
+                        {% comment %} <div class="">
                             <input type="checkbox" class="form-check-input" id="remember-me">
                             <label class="form-check-label" for="remember-me">Remember me</label>
                         </div>
-                        {% comment %} <div>
+                        <div>
                             <a href="#" class="ml-auto mt-3 text-sm">Forgot Password?</a>
-                        </div> {% endcomment %}
+                        </div>  {% endcomment %}
+                        <br>
                     </div>
                     <div class="row justify-content-center">
                         <button type="submit" class="btn btn-primary">Submit</button>
