--- a/exam_app/templates/dashboard/resultsdetail.html
+++ b/exam_app/templates/dashboard/resultsdetail.html
@@ -64,6 +64,28 @@
             top: 0;
             background-color: #2c3e50;
         }
+        /* Custom CSS for the Back button */
+        .btn-secondary {
+            background-color: #6c757d;
+            color: #ffffff;
+            padding: 10px 20px;
+            border: none;
+            text-decoration: none;
+            font-size: 16px;
+            border-radius: 5px;
+        }
+
+        .btn-secondary:hover {
+            background-color: #5a6268;
+        }
+
+        /* Optional styles for positioning the button */
+        .centered {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+        }
         </style>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
 </head>
@@ -102,6 +124,8 @@
         <img src="{{ blob_url }}" alt="Blob Image">
     {% endfor %}
     </div>
-    <a href="{% url 'result' %}" class="btn btn-secondary" style="margin-left:50%; margin-top:10px;">Back</a>
+    <div class="centered">
+        <a href="{% url 'result' %}" class="btn btn-secondary">Back</a>
+    </div>
 </body>
 </html>
